# AutoExamReloaded

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
Algorithms/: EvolutionaryScheduler.cpp  EvolutionaryScheduler.hpp  GeneticScheduler.cpp  GeneticScheduler.hpp
Models/: Career.cpp  Individual.cpp  Subject.cpp
Utils/: RandomUtils.cpp  RandomUtils.hpp  XLSXUtilities.cpp  XLSXUtilities.hpp
XLSX/: Copia de Horarios1232_pesos_materias.xlsm  Horarios1228.xlsm  Horarios1232.xlsm  Horarios1232_pesos_materias.xlsm  Horarios1238.xlsm  Horarios1238_agendados.xlsm
